--- a/HouseholdPowerConsumption.ipynb
+++ b/HouseholdPowerConsumption.ipynb
@@ -116,9 +116,10 @@
         "id": "i9S-v0AY4Pmo"
       },
       "source": [
-        "#Dataset and description\n",
-        "* **This archive contains 2075259 measurements gathered in a house located in Sceaux (7km of Paris, France) between December 2006 and November 2010 (47 months).**\n",
-        "***https://www.kaggle.com/uciml/electric-power-consumption-data-set***\n"
+        "#Overview:\n",
+        "*Managing and conserving energy is a vital problem for all global economies.  It is critical for energy producing and energy distribution companies to ensure that they are able to provide uninterrupted supply of power.  Forecasting energy demand is therefore very important for task.  Such forecasting problems are usually solved using timeseries forecasting methods. These methods rely on historical data to forecast what the future.  For energy demand forecasting the selected method has to be able to deal with trends, seasonal and cyclic fluctuations and disruptions. In this work we try to forecast the power demand for a single household based on the historically collected consumption data.  There are classical forecasting methods as well as autoregressive techniques for forecasting. Here we use recurrent neural networks for forecasting. While one of the advantages this approach is that it can handle non-stationary data, typically a large amount of data is required for effective model training. In this work we explore the performance of this timeseries forecasting approach. In particular we evaluate how the method performs as the time horizon for forecasting expands.*\n",
+        "#Source:\n",
+        "https://www.kaggle.com/uciml/electric-power-consumption-data-set\n"
       ]
     },
     {
@@ -146,7 +147,7 @@
       },
       "source": [
         "#Task:  \n",
-        "***Given the history of attributes for 6 days, predict the Global active power for the 7th day.***"
+        "*Given the history of attributes forecast Global active power into the future.*"
       ]
     },
     {
@@ -5024,17 +5025,18 @@
       },
       "source": [
         "* **Next-day forecast:**\n",
-        "* *Sampling data once every 60 minutes lacks the information the model needs to learn because it doesn't contain the information of power usage during that duration.*\n",
+        "* *Selecting data once every 60 minutes lacks the information the model needs to learn because it doesn't contain the information of power usage during that duration.*\n",
         "* *Using hourly resampled data worked well for the next-day forecast.*\n",
         "* **Next-week forecast:**\n",
-        "* *Using daily sampled data didn't work well because there are too few samples to learn from.*\n",
+        "* *Using daily sampled data didn't work well because there are too few samples to learn from. This time horizon requires a lot more data for effective model training.*\n",
         "* *Using hourly resampled data lacks the predicitivity for next-week forecast.*\n",
         "* **Next-hour forecast:**\n",
         "* *Using 10min sampled data works well for the next hour forecast.*\n",
         "* **General:**\n",
         "* *More tuning will improve the model predictivity.*\n",
         "* *For the given data LSTM performs well for next-hour and next day forecast. The preformance for the next week forecast is poor.*\n",
-        "* *More feautures is likely to improve model predictivity. Adding more submetering features, including household size, use of power backup systems, generators and alternative sources of energy like solar panels are few examples.*  "
+        "* **Additional considerations:**\n",
+        "* *Including more feautures is likely to improve model predictivity. For example, add more submetering features to capture all sources of consumption, include household size, use of power backup systems, generators and alternative sources of energy like solar panels, smart devices. Weather patterns also play a role in consumption. It might be useful to include temperature, humidity, hours of daylight to enrich the dataset. Holidays also cause change in consumption and therefore should also be considered in the analysis.*  "
       ]
     },
     {
